--- a/index.html
+++ b/index.html
@@ -1,1 +1,12 @@
-Hello World!
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>Estudo JavaScript Mozilla</title>
+</head>
+<body>
+    <h1></h1>
+    <button>Insira seu nome</button>
+    <script src="./js/script.js"></script>
+</body>
+</html>
