--- a/index.html
+++ b/index.html
@@ -5,19 +5,30 @@
     <title>Meu cu</title>
     <script
   src="http://code.jquery.com/jquery-3.3.1.min.js"></script>
+  
+  <script src="get.js"></script>
+  <script src="post.js"></script>
     
 </head>
 <body>
     <div id="app">
         <form id="myForm">
-            <input type="text" name="id">
+            <input type="number" name="id">
             <input type="text" name="fname">
             <button type="button" onclick="post()">Submit</button>
         </form>
         <button onclick="get()">Pegar</button>
-        <div id="resp"></div>
+        <table>
+            <thead>
+                <tr>
+                    <th>ID</th>
+                    <th>Name</th>
+                </tr>
+            </thead>
+            <tbody id="response">
+                
+            </tbody>
+        </table>
     </div>
-    <script src="get.js"></script>
-    <script src="post.js"></script>
 </body>
 </html>
