--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Meu cu</title>
+    <title>Estudo PHP &amp; JavaScript</title>
     <script
   src="http://code.jquery.com/jquery-3.3.1.min.js"></script>
   
