--- a/index.html
+++ b/index.html
@@ -3,15 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <title>Estudo PHP &amp; JavaScript</title>
-    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/bootstrap/bootstrap.min.css">
 
-    <script src="./js/jquery-3.3.1.min.js"></script>
-    <script src="./js/popper.min.js"></script>
-    <script src="./js/tooltip.min.js"></script>
-    <script src="./js/bootstrap.min.js"></script>    
+    <script src="js/jquery/jquery-3.3.1.min.js"></script>
+    <script src="js/popperjs/popper.min.js"></script>
+    <script src="js/popperjs/tooltip.min.js"></script>
+    <script src="js/bootstrap/bootstrap.min.js"></script>
 
-    <script src="js/get.js"></script>
-    <script src="js/post.js"></script>
+    <script src="js/request.js"></script>
     
     <style>
         html,
@@ -40,7 +39,7 @@
         <div id="app" class="container">
             <form id="myForm" class="form" style="width: 30%">
                 <input type="number" name="id" class="form-control form-control-sm mb-2" placeholder="ID">
-                <input type="text" name="fname" class="form-control form-control-sm mb-3" placeholder="Nome">
+                <input type="text" name="name" class="form-control form-control-sm mb-3" placeholder="Nome">
             </form>
             
             <button onclick="post()" class="btn btn-outline-dark btn-sm mb-3">Submit</button>
